# Parallel-Computing

./: .gitignore  CMakeLists.txt
cuda_examples/: matrix_multiply.cu
hello_world/: hello_world_in_c.c  hello_world_in_cpp.cpp  hello_world_in_cuda.cu
ignore/: screen_copy.sh
runtime_analysis/: Runtime_Analysis.cpp  Runtime_Analysis.h
setup_ide/: README.adoc
